--- a/src/styles/layouts/_main.scss
+++ b/src/styles/layouts/_main.scss
@@ -28,7 +28,7 @@
 }
 
 .wrapper {
-  background-color: #000;
+  background-color: rgb(19, 19, 19); // Match webgl background
   height: 100vh;
   width: 100vw;
   color: black;
